<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorful_flowers_background"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/semiTransparentBackground"
        app:cardCornerRadius="20dp"
        app:contentPadding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="serif"
                android:text="Community Garden"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="48sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColorLink="@color/colorSecondaryLight" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPassword"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorSecondaryLight"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFacebookLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignUp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>