<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etBio"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/etName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/bio"
        android:inputType="textImeMultiLine" />

    <fragment
        android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_below="@+id/etBio"
        android:layout_alignParentStart="true" />

    <!--    <EditText-->
    <!--        android:id="@+id/etAddress"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@+id/etBio"-->
    <!--        android:layout_alignParentStart="true"-->
    <!--        android:layout_marginStart="1dp"-->
    <!--        android:layout_marginTop="0dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="Location"-->
    <!--        android:inputType="textPostalAddress" />-->

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfilePic"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/profile_picture" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ivProfilePic"
        android:layout_gravity="bottom|right"
        android:layout_marginStart="110dp"
        android:layout_marginTop="105dp"
        android:src="@drawable/ic_baseline_photo_camera_24" />

</RelativeLayout>
