<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EventDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivEventPhoto"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:padding="20dp"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:text="Cactus Garden Tour" />

        <ImageView
            android:id="@+id/ivEventPhoto"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/tour_photo"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_baseline_person_24"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <RelativeLayout
            android:id="@+id/rlTimeAndGoing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <include
                android:id="@+id/vEventTime"
                layout="@layout/item_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />

            <Button
                android:id="@+id/btnCancelEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="26dp"
                android:padding="12dp"
                android:text="Cancel Event" />

        </RelativeLayout>

        <include
            android:id="@+id/divider"
            layout="@layout/horizontal_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/rlTimeAndGoing"
            android:layout_margin="20dp"
            android:padding="20dp" />


        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/about"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAbout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:padding="20dp"
            android:textSize="18sp"
            tools:text="Hello welcome! Our garden has over 200 varieties of Cacti. The garden is drought tolerant, and was started 5 years ago" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDescription"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/location"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLocation"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="12dp"
            android:padding="20dp"
            android:textSize="18sp"
            tools:text="1234 Cacti Lane, Arizona" />

        <ImageView
            android:id="@+id/ivMap"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/tvAddress"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/static_map"
            android:padding="4dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />


        <TextView
            android:id="@+id/tvAttendees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivMap"
            android:padding="20dp"
            android:text="Attendees"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivMap"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="Message All" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAttendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAttendees"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp" />

    </RelativeLayout>
</ScrollView>
