<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:background="@color/colorPrimaryFaded"
        android:orientation="vertical">

        <include
            android:id="@+id/toolBar"
            layout="@layout/toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp" />

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/toolBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="center"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfilePic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Hannah" />

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:padding="4dp"
            android:text="@string/edit_profile" />

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnEditProfile"
            android:layout_centerHorizontal="true"
            android:padding="12dp"
            android:textSize="24sp"
            tools:text="Bio: Hi I am Hannah" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBio"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:padding="12dp"
            android:textSize="24sp"
            tools:text="Location: Los Altos, CA" />

        <TextView
            android:id="@+id/tvEventHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLocation"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:padding="12dp"
            android:text="@string/event_history"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAttendedCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEventHistory"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:paddingStart="20dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            tools:text="10 Events Attended" />

        <TextView
            android:id="@+id/tvHostedCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAttendedCount"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:paddingStart="20dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="30sp"
            tools:text="2 Events Hosted" />

        <TextView
            android:id="@+id/tvUsersMet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHostedCount"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:paddingStart="20dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondary"
            android:textSize="30sp"
            tools:text="2 Events Hosted" />

    </RelativeLayout>
</ScrollView>
